Ensure text remains visible during webfont load

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1177,6 +1177,7 @@ form {
     url('/fonts/Open_Sans_400.woff2') format('woff2'),
     url('/fonts/Open_Sans_400.svg#OpenSans') format('svg'),
     url('/fonts/Open_Sans_400.ttf') format('truetype');
+    font-display: swap;
 }
 
 @font-face {
@@ -1191,6 +1192,7 @@ form {
     url('/fonts/Open_Sans_700.woff2') format('woff2'),
     url('/fonts/Open_Sans_700.svg#OpenSans') format('svg'),
     url('/fonts/Open_Sans_700.ttf') format('truetype');
+    font-display: swap;
 }
 
 @font-face {
@@ -1205,6 +1207,7 @@ form {
     url('/fonts/Lora_400.woff2') format('woff2'),
     url('/fonts/Lora_400.svg#Lora') format('svg'),
     url('/fonts/Lora_400.ttf') format('truetype');
+    font-display: swap;
 }
 
 @font-face {
@@ -1219,6 +1222,7 @@ form {
     url('/fonts/Lora_400italic.woff2') format('woff2'),
     url('/fonts/Lora_400italic.svg#Lora') format('svg'),
     url('/fonts/Lora_400italic.ttf') format('truetype');
+    font-display: swap;
 }
 
 @font-face {
@@ -1233,6 +1237,7 @@ form {
     url('/fonts/Lora_700.woff2') format('woff2'),
     url('/fonts/Lora_700.svg#Lora') format('svg'),
     url('/fonts/Lora_700.ttf') format('truetype');
+    font-display: swap;
 }
 
 
